--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,15 @@
           </archive>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <mainClass>ui.Applet</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
