--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>flatlaf</artifactId>
       <version>1.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>org.jfree.svg</artifactId>
+      <version>5.0.5</version>
+    </dependency>
 
     <!-- test dependencies -->
 
