Add more entries to .gitignore for IDEA
Looks like there were more things that IDEA adds under the .idea/
directory that cause Git to show a changed status.

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,6 @@ buildNumber.properties
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/maven
-=======
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij
@@ -36,6 +35,11 @@ buildNumber.properties
 
 # User-specific stuff
 .idea/**/workspace.xml
+.idea/**/compiler.xml
+.idea/**/encodings.xml
+.idea/**/jarRepositories.xml
+.idea/**/misc.xml
+.idea/**/vcs.xml
 
 # File-based project format
 *.iws
