--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,18 @@
     <maven.compiler.source>16</maven.compiler.source>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.10.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <!-- https://mvnrepository.com/artifact/com.formdev.flatlaf/flatlaf-core -->
     <dependency>
