--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.4.2</version>
+      <scope>test</scope>
+    </dependency>
 
     <!-- dependencies for graphical/integration testing -->
     <dependency>
